First try at 3MF. Doesn't export color changes correctly yet